# medexa-backend

./: .dockerignore  .env.aws.example  .env.example  .gitattributes  .gitignore  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION.md  Procfile  Progress_Report.html  README.md  implementation_plan.md  integration_plan.md  medexa_clinical_test_script.md  medexa_simulator_walkthrough.md  pyproject.toml  requirements.txt  serverless.yml
MEDEXA CPT FILES/: cpt_icd10_info_filtered.json
config/: activity_synonyms.json  cpt_lookup.json  icd_lookup.json  ncci_rules.json  trigger_rules.json
deploy/: HF_VERCEL.md  README.md  VERCEL_LOCAL_BACKEND.md
docs/: MEDEXA_PROJECT_SUMMARY.md
scripts/: aws_bootstrap.py  benchmark_path_a.py  build_nphies_skeletons.py  build_nphies_valueset_index.py  debug_extractor.py  deploy_aws.ps1  e2e_walkthrough.py  fetch_chi_payers.py  generate_summary_pdf.py  medexa_cli.py  run_api_server.py  run_local_for_vercel.ps1  run_local_session.py  smoke_test_nphies_builders.py  sync_region_config_to_s3.py  test_frontend_flow.py  test_insights_approve.py  test_voice_diarization.py
tests/: audio_fixtures.py  test_ambient_diarization_resolver.py  test_ambient_speaker_diarizer.py  test_api_contract.py  test_audio_duration.py  test_aws_storage_paths.py  test_aws_transcribe.py  test_bedrock_model_resolver.py  test_billing_clock_regression.py  test_billing_now.py  test_billing_summary_builder.py  test_billing_timer_engine.py  test_body_region_labels.py  test_deepgram_providers.py  test_deepgram_speaker_mapper.py  test_eight_minute_rule.py  test_entity_extractor.py  (+22 more)
(+299 files in other folders)
